# In-Play-Edge-Engine-

./: .gitignore  Makefile  README.md  pyproject.toml
apps/: predict_game.py
config/: default.yaml
data/raw/: nfl_team_stats.csv
data/vendors/NBA/raw/: nba_games_modern.csv  odds_pinnacle.csv  results.csv  schedule.csv
lib/common/: make_toy_raw.py  settings.py
lib/constants/: nba_teams.py  nfl_teams.py
lib/eval/: backtest.py
lib/featurization/: build_features.py
lib/ingest/: live_odds.py  live_odds_nfl.py  nba_api_fetch.py  nba_current_stats.py  nba_odds.py  nba_results.py  nba_schedule.py  nba_stats.py  nba_ticks_from_stats.py
lib/labeling/: build_labels.py
lib/modeling/: build_features.py  eval.py  live_predict.py  train.py  utils.py
lib/utils/: team_name_map.py
reports/NBA/: backtest.json
scripts/: clean_nba_stats.py  clean_nfl_stats.py  demo_bets.py  demo_bets_nfl.py  live_odds_nfl.py  train_nfl_model.py
tests/: test_leakage.py
