[project]
name = "inplay-edge"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "polars>=1.33.1,<2.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "duckdb>=1.4.0,<2.0.0",
    "lightgbm>=4.6.0,<5.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "joblib>=1.5.2,<2.0.0",
    "numpy>=2.3.3,<3.0.0",
    "pydantic>=2.11.9,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "mlflow<3",                       # pin to 2.x
    "optuna>=4.5.0,<5.0.0",
    "fastapi>=0.117.1,<0.118.0",
    "uvicorn>=0.37.0,<0.38.0",
    "redis>=6.4.0,<7.0.0",
    "httpx>=0.28.1,<0.29.0",
    "websockets>=15.0.1,<16.0.0",
    "structlog>=25.4.0,<26.0.0",
    "prometheus-client>=0.23.1,<0.24.0",
    "matplotlib>=3.10.6,<4.0.0",
    "protobuf (<5)",
    "setuptools (>=80.9.0,<81.0.0)",
    "nba-api (>=1.10.2,<2.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]

[tool.poetry]
package-mode = false
